--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Jacobcrease/krimi_viz",
   "name": "krimi-viz",
   "version": "0.1.0",
   "private": true,
@@ -20,6 +21,8 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,6 +49,7 @@
   "devDependencies": {
     "@types/hammerjs": "^2.0.41",
     "@types/react-plotly.js": "^2.5.0",
+    "gh-pages": "^3.2.3",
     "hammerjs": "^2.0.8"
   }
 }
