--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.io/Jacobcrease/krimi_viz",
+  "homepage": "https://jacobcrease.github.io/krimi_viz",
   "name": "krimi-viz",
   "version": "0.1.0",
   "private": true,
